--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=CrudTaquito
+server.port=8004
 
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=pos_admin;TrustServerCertificate=True
+spring.datasource.username=sa
+spring.datasource.password=AlexD1921
