Modificacion tipo de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=1921
 
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=pos_admin;TrustServerCertificate=True
 spring.datasource.username=sa
-spring.datasource.password=AlexD1921
+spring.datasource.password=rocio2405
